[tool.poetry]
name = "greenpass-decoder"
version = "0.1.0"
description = ""
authors = ["Renan Cammarosano <renancamm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "2.8"
cose = "^0.9.dev8"
cbor2 = "^5.4.1"
base45 = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
